--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,10 @@
     "autoload-dev": {
         "psr-4" : {
             "TestZone\\": "tests/"
-        }
+        },
+        "classmap" : [
+            "tests/Seeds"
+        ]
     },
     "scripts": {
         "post-root-package-install": [
